--- a/documents/swagger-yaml/cp1-ta.yaml
+++ b/documents/swagger-yaml/cp1-ta.yaml
@@ -11,7 +11,7 @@ paths:
       description: 'if the test is running, then place an obstacle on the map'
       parameters:
         - in: body
-          name: place obstacle parameters
+          name: Parameters
           schema:
             type: object
             required:
@@ -103,7 +103,7 @@ paths:
       description: 'if the test is running, remove a previously placed obstacle from the map'
       parameters:
         - in: body
-          name: place obstacle parameters
+          name: Parameters
           schema:
             type: object
             required:
@@ -147,7 +147,7 @@ paths:
       description: set the level of the battery in a currently running test
       parameters:
         - in: body
-          name: place obstacle parameters
+          name: Parameters
           schema:
             type: object
             required:
