--- a/documents/swagger-yaml/cp3-th.yaml
+++ b/documents/swagger-yaml/cp3-th.yaml
@@ -31,6 +31,29 @@ paths:
               target_loc:
                 type: string
                 description: the name of the goal map waypoint
+              initial_config: 
+                type: object
+                description: >-
+                  Specifies the initial configuration of the robot (subject to change)
+                properties:
+                  sensors:
+                    type: array
+                    items:
+                      type: string
+                    description: the set of sensors
+                  localization:
+                    type: string
+                    enum: 
+                      - algo1
+                      - algo2
+                      - algo3
+                    description: which localization algorithm to use
+                  navigation_config:
+                    type : string
+                    enum: 
+                      - algo1
+                      - algo2
+                      - algo3
               use_adaptation:
                 type: boolean
                 description: >-
@@ -66,7 +89,7 @@ paths:
                 description: one of a enumerated set of reasons that errors may arise
                 type: string
                 enum:
-                  - TEST_DATA_FILE_ERROR
+                  - TEST_CONFIG_ERROR
                   - TEST_DATA_FORMAT_ERROR
                   - DAS_LOG_FILE_ERROR
                   - DAS_OTHER_ERROR
